<resources>
    <string name="app_name">Prayer Time</string>
    <string name="alert_yes">WiFi Settings</string>
    <string name="alert_expire_db_yes">Update</string>
    <string name="alert_expire_db_no">Exit</string>
    <string name="alarm_vibrate_summary">Activates vibration for alarms</string>
    <string name="alarm_vibrate">Vibration</string>
    <string name="alarm_summary">Sound to play at prayer time</string>
    <string name="alarm_time">Time</string>
    <string name="alarm_sound_title">Custom Sound</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="city_prompt">Select City</string>
    <string name="compass_calib_msg">Move device like below for compass calibration</string>
    <string name="compass_calibration_low">Please calibrate compass</string>
    <string name="compass_img_desc">Compass</string>
    <string name="compass_init_angle">0°</string>
    <string name="compass_not_sup_msg">Unsupported device</string>
    <string name="compass_note_text">Please keep the device in horizontal position</string>
    <string name="con_error_msg">Please turn on internet connection</string>
    <string name="country_prompt">Select Country</string>
    <string name="enable_alarm">Enable Alarm</string>
    <string name="enable_alarm_summary">Activates alarm at prayer times</string>
    <string name="finding_loc_msg">Finding Location&#8230;</string>
    <string name="hello_blank_fragment">Hello Stranger</string>
    <string name="login_btn">Show Times</string>
    <string name="navigation_drawer_close">Close options</string>
    <string name="navigation_drawer_open">Open options</string>
    <string name="qibla_angle_head">Degree to qibla for current position</string>
    <string name="set_alarm">Select Alarm</string>
    <string name="state_prompt">Select State</string>
    <string name="time_reminder_title">Reminder</string>
    <string name="title_about">About</string>
    <string name="title_activity_home">Prayer Times</string>
    <string name="title_compass">Qibla Compass</string>
    <string name="title_ml_times">Monthly Times</string>
    <string name="title_settings">Settings</string>
    <string name="title_times">Prayer Times</string>
    <string name="widget_name">Prayer Time</string>
    <string name="wifi_message">WiFi may speed up location detection</string>
    <string-array name="lang_list">
        <item>English</item>
        <item>Turkish</item>
    </string-array>
    <string-array name="lang_list_vals">
        <item>en</item>
        <item>tr</item>
    </string-array>
    <string-array name="country_list">
        <item>USA</item>
        <item>AFGHANISTAN</item>
        <item>GERMANY</item>
        <item>ANDORRA</item>
        <item>ANGOLA</item>
        <item>ANGUILLA</item>
        <item>ANTIGUA VE BARBUDA</item>
        <item>ARGENTINA</item>
        <item>ALBANIA</item>
        <item>ARUBA</item>
        <item>AUSTRALIA</item>
        <item>AUSTRIA</item>
        <item>AZERBAIJAN</item>
        <item>BAHAMAS</item>
        <item>BAHRAIN</item>
        <item>BANGLADESH</item>
        <item>BARBADOS</item>
        <item>BELARUS</item>
        <item>BELGIUM</item>
        <item>BELIZE</item>
        <item>BENIN</item>
        <item>BERMUDA</item>
        <item>UNITED ARAB EMIRATES</item>
        <item>BOLIVIA</item>
        <item>BOSNIA AND HERZEGOVINA</item>
        <item>BOTSWANA</item>
        <item>BRAZIL</item>
        <item>BRUNEI</item>
        <item>BULGARIA</item>
        <item>BURKINA FASO</item>
        <item>BURMA (MYANMAR)</item>
        <item>BURUNDI</item>
        <item>BHUTAN</item>
        <item>CHAD</item>
        <item>CHECHNYa</item>
        <item>CZECH REPUBLIC</item>
        <item>ALGERIA</item>
        <item>DJIBOUTI</item>
        <item>CHINA</item>
        <item>DENMARK</item>
        <item>DEMOCRATIC REPUBLIC OF CONGO</item>
        <item>TIMOR</item>
        <item>DOMINICAN</item>
        <item>REPUBLIC OF DOMINICAN</item>
        <item>ECUADOR</item>
        <item>EQUATORIAL GUINEA</item>
        <item>EL SALVADOR</item>
        <item>INDONESIA</item>
        <item>ERITREA</item>
        <item>ARMENIA</item>
        <item>ESTONIA</item>
        <item>ETHIOPIA</item>
        <item>MOROCCO</item>
        <item>FIJI</item>
        <item>IVORY COAST</item>
        <item>PHILIPPINES</item>
        <item>PALESTINA</item>
        <item>FINLAND</item>
        <item>FRENCH</item>
        <item>GABON</item>
        <item>GAMBIA</item>
        <item>GHANA</item>
        <item>GUINEA</item>
        <item>GRANADA</item>
        <item>GREENLAND</item>
        <item>GUADELOPE</item>
        <item>GUAM ISLAND</item>
        <item>GUATEMALA</item>
        <item>SOUTH AFRICA</item>
        <item>SOUTH KOREAN</item>
        <item>GEORGIA</item>
        <item>GUYANE</item>
        <item>HAITI</item>
        <item>INDIAN</item>
        <item>CROATIA</item>
        <item>NETHERLANDS</item>
        <item>HOLLANDA ANTILLES</item>
        <item>HONDURAS</item>
        <item>HONG KONG</item>
        <item>ENGLAND</item>
        <item>IRAQ</item>
        <item>IRAN</item>
        <item>IRELAND</item>
        <item>SPAIN</item>
        <item>ISRAEL</item>
        <item>SWEDEN</item>
        <item>SWITZERLAND</item>
        <item>ITALY</item>
        <item>ICELAND</item>
        <item>JAMAICA</item>
        <item>JAPAN</item>
        <item>CAMBODIA</item>
        <item>CAMEROON</item>
        <item>CANADA</item>
        <item>MONTENEGRO</item>
        <item>QATAR</item>
        <item>KAZAKHSTAN</item>
        <item>KENYA</item>
        <item>KYRGYZSTAN</item>
        <item>COLOMBIA</item>
        <item>COMOROS</item>
        <item>KOSOVO</item>
        <item>COSTA RICA</item>
        <item>CUBA</item>
        <item>JERUSALEM</item>
        <item>KUWAIT</item>
        <item>NORTHERN CYPRUS</item>
        <item>NORTH KOREA</item>
        <item>LAOS</item>
        <item>LESOTHO</item>
        <item>LATVIA</item>
        <item>LIBERIA</item>
        <item>LIBYA</item>
        <item>LIECHTENSTEIN</item>
        <item>LITHUANIA</item>
        <item>LEBANON</item>
        <item>LUXEMBOURG</item>
        <item>HUNGARY</item>
        <item>MADAGASCAR</item>
        <item>MACAU</item>
        <item>MACEDONIA</item>
        <item>MALAWI</item>
        <item>MALDIVES</item>
        <item>MALAYSIA</item>
        <item>MALI</item>
        <item>MALTA</item>
        <item>MARTINIQUE</item>
        <item>MAURITIUS ISLAND</item>
        <item>MAYOTTE</item>
        <item>MEXICO</item>
        <item>MICRONESIA</item>
        <item>EGYPT</item>
        <item>MONGOLIA</item>
        <item>MOLDAVIA</item>
        <item>MONACO</item>
        <item>MONTSERRAT (U.K.)</item>
        <item>MAURITANIA</item>
        <item>MOZAMBIQUE</item>
        <item>NAMIBIA</item>
        <item>NEPAL</item>
        <item>NIGER</item>
        <item>NIGERIA</item>
        <item>NICARAGUA</item>
        <item>NIUE</item>
        <item>NORWAY</item>
        <item>CENTRAL AFRICAN REPUBLIC</item>
        <item>UZBEKISTAN</item>
        <item>PAKISTAN</item>
        <item>PALAU</item>
        <item>PANAMA</item>
        <item>PAPUA NEW GUINEA</item>
        <item>PARAGUAY</item>
        <item>PERU</item>
        <item>PITCAIRN ISLAND</item>
        <item>POLISH</item>
        <item>PORTUGAL</item>
        <item>PUERTO RICO</item>
        <item>REUNION</item>
        <item>ROMANIA</item>
        <item>RUANDA</item>
        <item>RUSSIA</item>
        <item>SAMOA</item>
        <item>SENEGAL</item>
        <item>SEYCHELLES</item>
        <item>CHILE</item>
        <item>SINGAPORE</item>
        <item>SERBIA</item>
        <item>SLOVAKIA</item>
        <item>SLOVENIA</item>
        <item>SOMALI</item>
        <item>SRI LANKA</item>
        <item>SUDAN</item>
        <item>SURINAME</item>
        <item>SYRIA</item>
        <item>SAUDI ARABIA</item>
        <item>SVALBARD</item>
        <item>SWAZILAND</item>
        <item>TAJIKISTAN</item>
        <item>TANZANIA</item>
        <item>THAILAND</item>
        <item>TAIWAN</item>
        <item>TOGO</item>
        <item>TONGA</item>
        <item>TRINIDAD AND TOBAGO</item>
        <item>TUNISIA</item>
        <item>TURKEY</item>
        <item>TURKMENISTAN</item>
        <item>UGANDA</item>
        <item>UKRAINE</item>
        <item>UKRAINE-CRIMEA</item>
        <item>OMAN</item>
        <item>JORDAN</item>
        <item>URUGUAY</item>
        <item>VANUATU</item>
        <item>VATICAN</item>
        <item>VENEZUELA</item>
        <item>VIETNAM</item>
        <item>YEMEN</item>
        <item>NEW CALEDONIA</item>
        <item>NEW ZEALAND</item>
        <item>CAPE VERDE</item>
        <item>GREECE</item>
        <item>ZAMBIA</item>
        <item>ZIMBABWE</item>
    </string-array>
    <string name="fajr">Fajr</string>
    <string name="shuruq">Shuruq</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="magrib">Magrib</string>
    <string name="isha">Isha</string>
    <string name="qibla">Qibla</string>
    <string name="azan_sound">Azan Sound</string>
    <string name="azan_sound_summary">Plays the azan sound at prayer times</string>
    <string name="language">Language</string>
    <string name="language_settings">Language Settings</string>
</resources>