<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc_ab_solid_dark_holo"
    android:gravity="center_horizontal"
    tools:context="eardic.qiblacompass.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/compassLocSatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/finding_loc_msg"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00BBFF"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/wifiMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compassLocSatus"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/wifi_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFBB00"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/compassNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/compass_note_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/angleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/qibla_angle_head"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/qiblaAngleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/angleHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/compass_init_angle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/compassCalibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/compassNote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/compass_calibration_low"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="340dp"
        android:layout_below="@id/qiblaAngleText"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/qabeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/kabe_wrong" />

        <ImageView
            android:id="@+id/imageViewCompass"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/compass_img_desc"
            android:src="@drawable/comp_norb" />

    </LinearLayout>

</RelativeLayout>
