<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/ml_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="00 Ağustos"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00BBFF" />

    <TableLayout
        android:id="@+id/ml_gl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ml_date"
        android:orientation="horizontal"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/compassErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fajr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#848484" />

            <TextView
                android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/shuruq"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#848484" />

            <TextView
                android:id="@+id/lastUpdateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dhuhr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#848484" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/asr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#848484" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/magrib"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#848484" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/isha"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#848484" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/qibla"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#848484" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/ml_imsak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ml_gunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ml_ogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ml_ikindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ml_aksam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ml_yatsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/ml_kible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
